--- a/MES/Views/Site/QualityElementRequestListView.xaml
+++ b/MES/Views/Site/QualityElementRequestListView.xaml
@@ -8,7 +8,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:common="clr-namespace:MesAdmin.Common.Common"
              xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
              xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
              mc:Ignorable="d"
@@ -66,8 +65,7 @@
                     </dxr:RibbonDefaultPageCategory>
                 </dxr:RibbonControl>
 
-                <dxg:GridControl x:Name="GridControl"
-                    common:GridRowIndicatorHelper.IsEnabled="True"                                 
+                <custom:DSGridControl x:Name="GridControl"                              
                     ItemsSource="{Binding Collections}"
                     SelectedItems="{Binding SelectedItems, UpdateSourceTrigger=PropertyChanged}"
                     ShowBorder="False"
@@ -109,7 +107,7 @@
                         <dxg:GridColumn FieldName="InspectorName" Header="검사자" Width="90"/>
                         <dxg:GridColumn FieldName="Memo" Header="Memo" Width="250" />
                     </dxg:GridControl.Columns>
-                </dxg:GridControl>
+                </custom:DSGridControl>
             </DockPanel>
         </dxb:BarManager>
     </Grid>
