--- a/MES/Views/Site/QualityRequestDetailFromERPView.xaml
+++ b/MES/Views/Site/QualityRequestDetailFromERPView.xaml
@@ -86,8 +86,7 @@
                     </dxr:RibbonDefaultPageCategory>
                 </dxr:RibbonControl>
 
-                <dxg:GridControl x:Name="GridControl"
-                    common:GridRowIndicatorHelper.IsEnabled="True"                                 
+                <custom:DSGridControl x:Name="GridControl"                                
                     ItemsSource="{Binding Collections}"       
                     ShowBorder="False"
                     ClipboardCopyMode="ExcludeHeader"
@@ -131,7 +130,7 @@
                         <dxg:GridColumn FieldName="Result" Header="검사결과" Width="70"/>
                         <dxg:GridColumn FieldName="Memo" Header="Memo" />
                     </dxg:GridControl.Columns>
-                </dxg:GridControl>
+                </custom:DSGridControl>
             </DockPanel>
         </dxb:BarManager>
     </Grid>
