--- a/MES/Resources/Dictionary/GridRowIndicator.xaml
+++ b/MES/Resources/Dictionary/GridRowIndicator.xaml
@@ -1,18 +1,17 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-	xmlns:dxgt="clr-namespace:DevExpress.Xpf.Grid.Themes;assembly=DevExpress.Xpf.Grid.v21.2"
-    xmlns:util="clr-namespace:MesAdmin.Common.Utils">
+                    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:dxgt="clr-namespace:DevExpress.Xpf.Grid.Themes;assembly=DevExpress.Xpf.Grid.v21.2"
+                    xmlns:util="clr-namespace:MesAdmin.Common.Utils">
     <DataTemplate x:Key="{dxgt:RowIndicatorThemeKey ResourceKey=IconPresenterTemplate, IsThemeIndependent=True}">
         <DockPanel x:Name="root" Background="Transparent">
-            <TextBlock Margin="5 2 2 2" Text="{DXBinding Expr='RowHandle.Value &gt;= 0 ? RowHandle.Value + 1 : null'}">
-                <!--<TextBlock.Text>
+            <TextBlock Margin="5 2 2 2">
+                <TextBlock.Text>
                     <MultiBinding Mode="OneWay" Converter="{util:RowNumberConverter}">
                         <Binding Path="View.DataControl" />
                         <Binding Path="RowHandle.Value" />
                     </MultiBinding>
-                </TextBlock.Text>-->
+                </TextBlock.Text>
             </TextBlock>
             <ContentPresenter x:Name="iconPresenter" Content="{x:Null}" IsHitTestVisible="False" />
             <Image x:Name="Image" Height="11" Width="11" Source="{x:Null}" Visibility="Collapsed" DockPanel.Dock="Right" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0 0 2 0" />
