--- a/MES/Views/CommonMinorView.xaml
+++ b/MES/Views/CommonMinorView.xaml
@@ -1,29 +1,23 @@
-﻿<UserControl 
-    x:Class="MesAdmin.Views.CommonMinorView"
-    xmlns="http://schemas.microsoft.com/netfx/2009/xaml/presentation" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core" 
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars" 
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol" 
-    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm" 
-    xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
-    xmlns:view="clr-namespace:MesAdmin.Views"
-    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-    xmlns:dxet="http://schemas.devexpress.com/winfx/2008/xaml/editors/themekeys"
-    xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
-    xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-    xmlns:common="clr-namespace:MesAdmin.Common.Common"
-    xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
-    mc:Ignorable="d"
-    d:DesignHeight="650"
-    d:DesignWidth="670"
-    DataContext="{dxmvvm:ViewModelSource ViewModels:CommonMinorVM}">
-    
+﻿<UserControl x:Class="MesAdmin.Views.CommonMinorView"
+             xmlns="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+             xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
+             xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
+             mc:Ignorable="d"
+             d:DesignHeight="650"
+             d:DesignWidth="670"
+             DataContext="{dxmvvm:ViewModelSource ViewModels:CommonMinorVM}">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -67,14 +61,13 @@
                                         </Border>
                                     </DataTemplate>
                                 </dxlc:GroupBox.HeaderTemplate>
-                                <dxg:GridControl
-                                        common:GridRowIndicatorHelper.IsEnabled="True"
-                                        ItemsSource="{Binding CollectionsMajor}"
-                                        SelectedItem="{Binding SelectedMajor, UpdateSourceTrigger=PropertyChanged}"
-                                        SelectionMode="Row"
-                                        ShowBorder="False"
-                                        ClipboardCopyMode="ExcludeHeader"
-                                        EnableSmartColumnsGeneration="True">
+                                <custom:DSGridControl
+                                    ItemsSource="{Binding CollectionsMajor}"
+                                    SelectedItem="{Binding SelectedMajor, UpdateSourceTrigger=PropertyChanged}"
+                                    SelectionMode="Row"
+                                    ShowBorder="False"
+                                    ClipboardCopyMode="ExcludeHeader"
+                                    EnableSmartColumnsGeneration="True">
                                     <dxmvvm:Interaction.Behaviors>
                                         <dxmvvm:EventToCommand EventName="SelectedItemChanged" Command="{Binding SelectedItemChangedCmd}" />
                                     </dxmvvm:Interaction.Behaviors>
@@ -94,7 +87,7 @@
                                                 Width="150" />
                                         <dxg:GridColumn FieldName="MajorName" Header="Major 코드명" />
                                     </dxg:GridControl.Columns>
-                                </dxg:GridControl>
+                                </custom:DSGridControl>
                             </dxlc:GroupBox>
                         </dxdo:LayoutPanel>
                         <dxdo:LayoutPanel HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Disabled" ItemWidth="*" AllowClose="False" AllowDrag="False" AllowFloat="False" AllowHide="False" ShowCaption="False" ShowBorder="False">
@@ -108,7 +101,6 @@
                                 </dxlc:GroupBox.HeaderTemplate>
                                 <custom:DSGridControl
                                     x:Name="MinorGrid"
-                                    common:GridRowIndicatorHelper.IsEnabled="True"
                                     ItemsSource="{Binding CollectionsMinor}"
                                     SelectedItems="{Binding SelectedItems, UpdateSourceTrigger=PropertyChanged}"
                                     SelectionMode="Cell"
