--- a/MES/Views/MaterialDispenseReqDetailView.xaml
+++ b/MES/Views/MaterialDispenseReqDetailView.xaml
@@ -1,29 +1,24 @@
-﻿<UserControl 
-    x:Class="MesAdmin.Views.MaterialDispenseReqDetailView"
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"  
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-    xmlns:viewmodel="clr-namespace:MesAdmin.ViewModels"
-    xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-    xmlns:local="clr-namespace:MesAdmin"
-    mc:Ignorable="d"
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:common="clr-namespace:MesAdmin.Common.Common"
-    xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
-    d:DesignHeight="436" 
-    d:DesignWidth="800"
-    xmlns:view="clr-namespace:MesAdmin.Views">
+﻿<UserControl x:Class="MesAdmin.Views.MaterialDispenseReqDetailView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+             xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
+             xmlns:viewmodel="clr-namespace:MesAdmin.ViewModels"
+             xmlns:view="clr-namespace:MesAdmin.Views"
+             mc:Ignorable="d"
+             d:DesignHeight="436"
+             d:DesignWidth="800">
     <UserControl.DataContext>
         <viewmodel:MaterialDispenseReqDetailVM />
     </UserControl.DataContext>
-
     <UserControl.Resources>
         <ResourceDictionary>
             <utils:MinorCodeConverter x:Key="MinorCodeConverter"/>
@@ -119,8 +114,7 @@
                     </dxr:RibbonDefaultPageCategory>
                 </dxr:RibbonControl>
 
-                <dxg:GridControl
-                    common:GridRowIndicatorHelper.IsEnabled="True"
+                <custom:DSGridControl
                     ItemsSource="{Binding Collections}"
                     ShowBorder="False"
                     SelectionMode="Cell"
@@ -164,7 +158,7 @@
                         <dxg:GridColumn FieldName="UpdateId" Header="입력자 Id" MinWidth="80" />
                         <dxg:GridColumn FieldName="UpdateDate" Header="입력일" MinWidth="100" />
                     </dxg:GridControl.Columns>
-                </dxg:GridControl>
+                </custom:DSGridControl>
             </DockPanel>
         </dxb:BarManager>
     </Grid>
