--- a/MES/Views/PopupMaterialDispenseDetailView.xaml
+++ b/MES/Views/PopupMaterialDispenseDetailView.xaml
@@ -1,24 +1,18 @@
 ﻿<UserControl x:Class="MesAdmin.Views.PopupMaterialDispenseDetailView"
-    xmlns="http://schemas.microsoft.com/netfx/2009/xaml/presentation" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core" 
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars" 
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors" 
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol" 
-    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm" 
-    xmlns:viewmodel="clr-namespace:MesAdmin.ViewModels"
-    xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-    xmlns:common="clr-namespace:MesAdmin.Common.Common"
-    xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"             
-    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-    mc:Ignorable="d" 
-    d:DesignHeight="400"
-    d:DesignWidth="670">
-    
+             xmlns="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+             xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
+             mc:Ignorable="d" 
+             d:DesignHeight="400"
+             d:DesignWidth="670">
     <dxmvvm:Interaction.Behaviors>
         <dxmvvm:CurrentWindowService Window="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}"/>
     </dxmvvm:Interaction.Behaviors>
@@ -98,8 +92,7 @@
             </dxe:DateEdit>
         </Grid>
 
-        <dxg:GridControl
-            common:GridRowIndicatorHelper.IsEnabled="True"
+        <custom:DSGridControl
             Grid.Row="2" 
             ItemsSource="{Binding Header}" 
             SelectedItem="{Binding SelectedHeader}"
@@ -146,11 +139,10 @@
                 <dxg:GridColumn FieldName="UpdateId" Header="입력자 Id" MinWidth="80" />
                 <dxg:GridColumn FieldName="UpdateDate" Header="입력일" MinWidth="100" />
             </dxg:GridControl.Columns>
-        </dxg:GridControl>
+        </custom:DSGridControl>
 
-        <dxg:GridControl 
+        <custom:DSGridControl
             Grid.Row="3"
-            common:GridRowIndicatorHelper.IsEnabled="True"
             ItemsSource="{Binding Detail}"
             SelectionMode="Cell"
             ClipboardCopyMode="ExcludeHeader"
@@ -193,6 +185,6 @@
                 </dxg:GridColumn>
                 <dxg:GridColumn FieldName="Memo" Header="메모" FixedWidth="True" Width="200" />
             </dxg:GridControl.Columns>
-        </dxg:GridControl>
+        </custom:DSGridControl>
     </Grid>
 </UserControl>
