--- a/MES/Views/PopupSalesOrderView.xaml
+++ b/MES/Views/PopupSalesOrderView.xaml
@@ -1,24 +1,18 @@
 ﻿<UserControl x:Class="MesAdmin.Views.PopupSalesOrderView"
-    xmlns="http://schemas.microsoft.com/netfx/2009/xaml/presentation" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core" 
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars" 
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors" 
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol" 
-    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm" 
-    xmlns:viewmodel="clr-namespace:MesAdmin.ViewModels"
-    xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-    xmlns:common="clr-namespace:MesAdmin.Common.Common"
-    xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"             
-    mc:Ignorable="d" 
-    d:DesignHeight="400"
-    d:DesignWidth="670">
-
+             xmlns="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+             xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
+             mc:Ignorable="d" 
+             d:DesignHeight="400"
+             d:DesignWidth="670">
     <UserControl.Resources>
         <ResourceDictionary>
             <utils:MinorCodeConverter x:Key="MinorCodeConverter"/>
@@ -143,9 +137,8 @@
             </dxg:LookUpEdit>
         </Grid>
 
-        <dxg:GridControl 
+        <custom:DSGridControl
             Grid.Row="2"
-            common:GridRowIndicatorHelper.IsEnabled="True"
             ItemsSource="{Binding CollectionsHeader}" 
             SelectedItem="{Binding SelectedHeader}"
             ClipboardCopyMode="ExcludeHeader"
@@ -180,11 +173,10 @@
                 <dxg:GridColumn FieldName="UpdateId" Header="입력자Id" Width="80"/>
                 <dxg:GridColumn FieldName="UpdateDate" Header="입력일" Width="80"/>
             </dxg:GridControl.Columns>
-        </dxg:GridControl>
+        </custom:DSGridControl>
 
-        <dxg:GridControl 
+        <custom:DSGridControl
             Grid.Row="3"
-            common:GridRowIndicatorHelper.IsEnabled="True"
             ItemsSource="{Binding CollectionsDetail}"
             SelectionMode="Cell"
             ClipboardCopyMode="ExcludeHeader"
@@ -222,6 +214,6 @@
                 </dxg:GridColumn>
                 <dxg:GridColumn FieldName="Memo" Header="비고" MinWidth="250" />
             </dxg:GridControl.Columns>
-        </dxg:GridControl>
+        </custom:DSGridControl>
     </Grid>
 </UserControl>
