--- a/MES/Views/PopupStockView.xaml
+++ b/MES/Views/PopupStockView.xaml
@@ -1,20 +1,19 @@
-﻿<UserControl 
-    x:Class="MesAdmin.Views.PopupStockView"
-    xmlns="http://schemas.microsoft.com/netfx/2009/xaml/presentation" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars" xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors" 
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol" xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm" 
-    xmlns:viewmodel="clr-namespace:MesAdmin.ViewModels"
-    xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-    xmlns:common="clr-namespace:MesAdmin.Common.Common"
-    xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
-    mc:Ignorable="d"
-    d:DesignHeight="400"
-    d:DesignWidth="670"
-    x:Name="PopupStock">
-
+﻿<UserControl x:Class="MesAdmin.Views.PopupStockView"
+             xmlns="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+             xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
+             mc:Ignorable="d"
+             d:DesignHeight="400"
+             d:DesignWidth="670"
+             x:Name="PopupStock">
     <UserControl.Resources>
         <ResourceDictionary>
             <utils:WaCodeConverter x:Key="WaCodeConverter"/>
@@ -103,8 +102,7 @@
                     </dxe:TextEdit.InputBindings>
                 </dxe:TextEdit>
             </Grid>
-            <dxg:GridControl
-                common:GridRowIndicatorHelper.IsEnabled="True"
+            <custom:DSGridControl
                 ItemsSource="{Binding Collections}"
                 SelectedItems="{Binding SelectedItems, UpdateSourceTrigger=PropertyChanged}"
                 SelectedItem="{Binding Path=SelectedItem}"
@@ -146,7 +144,7 @@
                     <dxg:GridColumn FieldName="BasicUnit" Width="50" Header="단위"/>
                     <dxg:GridColumn Binding="{Binding RowData.Row.WaCode, Converter={StaticResource WaCodeConverter}}" Width="80" Header="공정"/>
                 </dxg:GridControl.Columns>
-            </dxg:GridControl>
+            </custom:DSGridControl>
         </DockPanel>
         <dxb:BarContainerControl ContainerType="Bottom" Grid.Row="1">
             <dxb:StatusBarControl Caption="Status Bar">
