--- a/MES/Views/ProductionEquipmentParameterValueView.xaml
+++ b/MES/Views/ProductionEquipmentParameterValueView.xaml
@@ -1,24 +1,19 @@
-﻿<UserControl
-    x:Class="MesAdmin.Views.ProductionEquipmentParameterValueView"
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"  
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-    xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels" 
-    xmlns:local="clr-namespace:MesAdmin" 
-    xmlns:view="clr-namespace:MesAdmin.Views"
-    xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-    mc:Ignorable="d"
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-    xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
-    xmlns:common="clr-namespace:MesAdmin.Common.Common"
-    d:DesignHeight="436" d:DesignWidth="800">
+﻿<UserControl x:Class="MesAdmin.Views.ProductionEquipmentParameterValueView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+             xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
+             mc:Ignorable="d"
+             d:DesignHeight="436" d:DesignWidth="800">
     <UserControl.DataContext>
         <ViewModels:ProductionEquipmentParameterValueVM />
     </UserControl.DataContext>
@@ -152,7 +147,6 @@
                         IsReadOnly="True" />
                 </Grid>
                 <custom:DSGridControl
-                    common:GridRowIndicatorHelper.IsEnabled="True"
                     ItemsSource="{Binding Collection, UpdateSourceTrigger=PropertyChanged}"
                     SelectedItem="{Binding SelectedItem, UpdateSourceTrigger=PropertyChanged}"
                     DockPanel.Dock="Top"
