--- a/MES/Views/QualityRequestDetailView.xaml
+++ b/MES/Views/QualityRequestDetailView.xaml
@@ -9,7 +9,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:common="clr-namespace:MesAdmin.Common.Common"
              xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
              mc:Ignorable="d"
              d:DesignHeight="436"
@@ -60,8 +59,7 @@
                     </dxr:RibbonDefaultPageCategory>
                 </dxr:RibbonControl>
 
-                <dxg:GridControl x:Name="GridControl"
-                    common:GridRowIndicatorHelper.IsEnabled="True"                                 
+                <custom:DSGridControl x:Name="GridControl"                               
                     ItemsSource="{Binding Collections}"       
                     ShowBorder="False"
                     ClipboardCopyMode="ExcludeHeader"
@@ -109,7 +107,7 @@
                         </dxg:GridColumn>
                         <dxg:GridColumn FieldName="BizName" Header="공급처" Visible="{Binding VisibleBiz}"/>
                     </dxg:GridControl.Columns>
-                </dxg:GridControl>
+                </custom:DSGridControl>
             </DockPanel>
         </dxb:BarManager>
     </Grid>
