--- a/MES/Views/Site/BAC60COMMONR001.xaml
+++ b/MES/Views/Site/BAC60COMMONR001.xaml
@@ -1,25 +1,20 @@
 ﻿<UserControl    x:Class="MesAdmin.Views.BAC60COMMONR001"
-                xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"  
-                xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-                xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-                xmlns:view="clr-namespace:MesAdmin.Views"             
-                xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
-                xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-                xmlns:local="clr-namespace:MesAdmin"
-                xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"             
-                mc:Ignorable="d"
                 xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-                xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
                 xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+                xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+                xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
                 xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-                d:DesignHeight="436" 
-                d:DesignWidth="1200"
-                xmlns:common="clr-namespace:MesAdmin.Common.Common">
-
+                xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+                xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
+                xmlns:view="clr-namespace:MesAdmin.Views"
+                mc:Ignorable="d"
+                d:DesignHeight="436"
+                d:DesignWidth="1200">
     <UserControl.Resources>
         <ResourceDictionary>
             <DataTemplate x:Key="ItemCode">
@@ -89,7 +84,6 @@
                 </dxr:RibbonControl>
 
                 <custom:DSGridControl
-                    common:GridRowIndicatorHelper.IsEnabled="True"
                     ItemsSource="{Binding Collection, UpdateSourceTrigger=PropertyChanged}"
                     SelectedItems="{Binding SelectedItems, UpdateSourceTrigger=PropertyChanged}"
                     ShowBorder="False"
