--- a/MES/Views/Site/BAC60INDICATORR001.xaml
+++ b/MES/Views/Site/BAC60INDICATORR001.xaml
@@ -1,26 +1,21 @@
 ﻿<UserControl    x:Class="MesAdmin.Views.BAC60INDICATORR001"
-                xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"  
-                xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-                xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-                xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-                xmlns:common="clr-namespace:MesAdmin.Common.Common"
-                xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-                xmlns:local="clr-namespace:MesAdmin"
-                mc:Ignorable="d"
                 xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-                xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-                xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-                xmlns:dxci="http://schemas.devexpress.com/winfx/2008/xaml/core/internal"
-                xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
-                xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
                 xmlns:dxc="http://schemas.devexpress.com/winfx/2008/xaml/charts"
-                d:DesignHeight="436" 
-                d:DesignWidth="800"
-                xmlns:view="clr-namespace:MesAdmin.Views">
+                xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+                xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
+                xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+                xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+                xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+                xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+                xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
+                mc:Ignorable="d"
+                d:DesignHeight="436"
+                d:DesignWidth="800">
     <UserControl.Resources>
         <ResourceDictionary>
             <utils:CascadingItemCode x:Key="CascadingItemCode"/>
@@ -146,7 +141,6 @@
                         <dxdo:LayoutGroup Orientation="Vertical" Margin="0">
                             <dxdo:LayoutPanel HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Disabled" ItemHeight="6*" AllowClose="False" AllowDrag="False" AllowFloat="False" AllowHide="False" ShowCaption="False" ShowBorder="False">
                                 <custom:DSGridControl
-                                    common:GridRowIndicatorHelper.IsEnabled="True"
                                     ItemsSource="{Binding Collection, UpdateSourceTrigger=PropertyChanged}"
                                     ShowBorder="False"
                                     SelectionMode="Cell"
