--- a/MES/Views/Site/QualityLabelPrintHistoryView.xaml
+++ b/MES/Views/Site/QualityLabelPrintHistoryView.xaml
@@ -1,26 +1,22 @@
-﻿<UserControl 
-    x:Class="MesAdmin.Views.QualityLabelPrintHistoryView"
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"  
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-    xmlns:viewmodel="clr-namespace:MesAdmin.ViewModels"
-    xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-    xmlns:common="clr-namespace:MesAdmin.Common.Common"             
-    xmlns:local="clr-namespace:MesAdmin"
-    mc:Ignorable="d"
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
-    xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"             
-    d:DesignHeight="436" 
-    d:DesignWidth="800"
-    xmlns:view="clr-namespace:MesAdmin.Views">
+﻿<UserControl x:Class="MesAdmin.Views.QualityLabelPrintHistoryView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+             xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
+             xmlns:viewmodel="clr-namespace:MesAdmin.ViewModels"
+             xmlns:view="clr-namespace:MesAdmin.Views"
+             mc:Ignorable="d"
+             d:DesignHeight="436"
+             d:DesignWidth="800">
     <UserControl.DataContext>
         <viewmodel:SalesLabelPrintHistoryVM />
     </UserControl.DataContext>
@@ -154,8 +150,7 @@
         </dxr:RibbonControl>
 
         <TextBlock Grid.Row="1" Margin="2,5,0,2" VerticalAlignment="Center" Text="출하요청내역" FontWeight="Bold" FontStyle="Italic" />
-        <dxg:GridControl Grid.Row="2"
-            common:GridRowIndicatorHelper.IsEnabled="True"                         
+        <custom:DSGridControl Grid.Row="2"                        
             ItemsSource="{Binding Collections}"
             ShowBorder="False"
             SelectionMode="Cell"
@@ -212,11 +207,10 @@
                 <dxg:GridColumn FieldName="SoSeq" Header="수주순번" Width="60" />
                 <dxg:GridColumn FieldName="Memo" Header="Memo" Width="120" />
             </dxg:GridControl.Columns>
-        </dxg:GridControl>
+        </custom:DSGridControl>
 
         <TextBlock Grid.Row="3" Margin="2,5,0,2" VerticalAlignment="Center" Text="출력내역" FontWeight="Bold" FontStyle="Italic" />
-        <dxg:GridControl Grid.Row="4"
-            common:GridRowIndicatorHelper.IsEnabled="True"                         
+        <custom:DSGridControl Grid.Row="4"                        
             ItemsSource="{Binding Details}"
             SelectedItem="{Binding SelectedDetail, UpdateSourceTrigger=PropertyChanged}"
             ShowBorder="False"
@@ -266,6 +260,6 @@
             <dxg:GridControl.TotalSummary>
                 <dxg:GridSummaryItem FieldName="Qty" SummaryType="Sum" DisplayFormat=" {0:n0}"/>
             </dxg:GridControl.TotalSummary>
-        </dxg:GridControl>
+        </custom:DSGridControl>
     </Grid>
 </UserControl>
