--- a/MES/Views/Site/QualityRequestElementView.xaml
+++ b/MES/Views/Site/QualityRequestElementView.xaml
@@ -1,27 +1,23 @@
-﻿<UserControl
-    x:Class="MesAdmin.Views.QualityRequestElementView"
-    xmlns:sys="clr-namespace:System;assembly=mscorlib"
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"  
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-    xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
-    xmlns:models="clr-namespace:MesAdmin.Models"
-    xmlns:local="clr-namespace:MesAdmin" 
-    xmlns:view="clr-namespace:MesAdmin.Views"
-    xmlns:common="clr-namespace:MesAdmin.Common.Common"             
-    mc:Ignorable="d"
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:dxi="http://schemas.devexpress.com/winfx/2008/xaml/core/internal" 
-    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-    xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-    xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
-    d:DesignHeight="800" d:DesignWidth="800">
+﻿<UserControl x:Class="MesAdmin.Views.QualityRequestElementView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxi="http://schemas.devexpress.com/winfx/2008/xaml/core/internal"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:common="clr-namespace:MesAdmin.Common.Common"
+             xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+             xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
+             xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
+             xmlns:view="clr-namespace:MesAdmin.Views"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
+             mc:Ignorable="d"
+             d:DesignHeight="800" d:DesignWidth="800">
     <UserControl.DataContext>
         <ViewModels:QualityRequestElementVM/>
     </UserControl.DataContext>
@@ -309,8 +305,7 @@
                                             <dx:WaitIndicator DeferedVisibility="True" Content="데이터등록중..." Height="105" OverridesDefaultStyle="True" />
                                         </DataTemplate>
                                     </dx:LoadingDecorator.SplashScreenTemplate>
-                                    <dxg:GridControl
-                                        common:GridRowIndicatorHelper.IsEnabled="True"
+                                    <custom:DSGridControl
                                         ItemsSource="{Binding QualityElementIVLList, UpdateSourceTrigger=PropertyChanged}"
                                         TotalSummarySource="{Binding QualityElementIVLResult}"
                                         TotalSummaryGeneratorTemplate="{StaticResource ResultTemplate}"
@@ -370,7 +365,7 @@
                                                 <dxg:GridColumn FieldName="CIEy" Header="CIEy" HorizontalHeaderContentAlignment="Center" AllowSorting="False" AllowColumnFiltering="False" Width="80" />
                                             </dxg:GridControlBand>
                                         </dxg:GridControl.Bands>
-                                    </dxg:GridControl>
+                                    </custom:DSGridControl>
                                 </dx:LoadingDecorator>
                             </DockPanel>
                         </Grid>
@@ -404,8 +399,7 @@
                                             <dx:WaitIndicator DeferedVisibility="True" Content="데이터등록중..." Height="105" OverridesDefaultStyle="True" />
                                         </DataTemplate>
                                     </dx:LoadingDecorator.SplashScreenTemplate>
-                                    <dxg:GridControl
-                                        common:GridRowIndicatorHelper.IsEnabled="True"
+                                    <custom:DSGridControl
                                         ItemsSource="{Binding QualityElementLTList}"
                                         TotalSummarySource="{Binding QualityElementLTResult}"
                                         TotalSummaryGeneratorTemplate="{StaticResource ResultTemplate}"
@@ -450,7 +444,7 @@
                                                 <dxg:GridColumn FieldName="Ref" Header="sample-1" Width="150" HorizontalHeaderContentAlignment="Center" AllowSorting="False" AllowColumnFiltering="False" />
                                             </dxg:GridControlBand>
                                         </dxg:GridControl.Bands>
-                                    </dxg:GridControl>
+                                    </custom:DSGridControl>
                                 </dx:LoadingDecorator>
                             </DockPanel>
                         </Grid>
