--- a/MES/Views/Site/StockFromBillsView.xaml
+++ b/MES/Views/Site/StockFromBillsView.xaml
@@ -1,22 +1,20 @@
-﻿<UserControl
-    x:Class="MesAdmin.Views.StockFromBillsView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
-    xmlns:view="clr-namespace:MesAdmin.Views"             
-    xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-    xmlns:utils="clr-namespace:MesAdmin.Common.Utils"             
-    mc:Ignorable="d"
-    xmlns:common="clr-namespace:MesAdmin.Common.Common"
-    xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"             
-    d:DesignHeight="600" d:DesignWidth="600">
+﻿<UserControl x:Class="MesAdmin.Views.StockFromBillsView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+             xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
+             xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
+             xmlns:view="clr-namespace:MesAdmin.Views"
+             mc:Ignorable="d"
+             d:DesignHeight="600" d:DesignWidth="600">
     <UserControl.DataContext>
         <ViewModels:StockFromBillsVM/>
     </UserControl.DataContext>
@@ -92,8 +90,7 @@
                 </dxr:RibbonDefaultPageCategory>
             </dxr:RibbonControl>
 
-            <dxg:GridControl
-                common:GridRowIndicatorHelper.IsEnabled="True"
+            <custom:DSGridControl
                 ItemsSource="{Binding Collections, UpdateSourceTrigger=PropertyChanged}"
                 ShowBorder="False"
                 SelectionMode="Cell"
@@ -169,7 +166,7 @@
                     <dxg:GridSummaryItem FieldName="QrQty" SummaryType="Sum" DisplayFormat=" {0:n4}"/>
                     <dxg:GridSummaryItem FieldName="PickingQty" SummaryType="Sum" DisplayFormat=" {0:n4}"/>
                 </dxg:GridControl.GroupSummary>
-            </dxg:GridControl>
+            </custom:DSGridControl>
         </DockPanel>
     </Grid>
 </UserControl>
